build-logs/build-termbox-bindings-c-0.1.0.1.log
Build profile: -w ghc-9.6.6 -O1
In order, the following will be built (use -v for more details):
 - termbox-bindings-c-0.1.0.1 (lib) (first run)
Configuring library for termbox-bindings-c-0.1.0.1...
Preprocessing library for termbox-bindings-c-0.1.0.1...
Building library for termbox-bindings-c-0.1.0.1...
[1 of 1] Compiling Termbox.Bindings.C
cbits/termbox.c: In function ‘tb_present’:

cbits/termbox.c:802:17: error:
     warning: implicit declaration of function ‘wcwidth’ [-Wimplicit-function-declaration]
      802 |             w = wcwidth(back->ch);
          |                 ^~~~~~~
    |
802 |             w = wcwidth(back->ch);
    |                 ^
cbits/termbox.c: In function ‘sigwinch_handler’:

cbits/termbox.c:1177:5: error:
     warning: ignoring return value of ‘write’ declared with attribute ‘warn_unused_result’ [-Wunused-result]
     1177 |     write(winch_fds[1], &zzz, sizeof(int));
          |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     |
1177 |     write(winch_fds[1], &zzz, sizeof(int));
     |     ^
cbits/termbox.c: In function ‘bytebuffer_flush’:

cbits/termbox.c:1327:5: error:
     warning: ignoring return value of ‘write’ declared with attribute ‘warn_unused_result’ [-Wunused-result]
     1327 |     write(fd, b->buf, b->len);
          |     ^~~~~~~~~~~~~~~~~~~~~~~~~
     |
1327 |     write(fd, b->buf, b->len);
     |     ^
cbits/termbox.c: In function ‘wait_fill_event’:

cbits/termbox.c:1268:13: error:
     warning: ignoring return value of ‘read’ declared with attribute ‘warn_unused_result’ [-Wunused-result]
     1268 |             read(winch_fds[0], &zzz, sizeof(int));
          |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     |
1268 |             read(winch_fds[0], &zzz, sizeof(int));
     |             ^
cbits/termbox.c: In function ‘tb_present’:

cbits/termbox.c:802:17: error:
     warning: implicit declaration of function ‘wcwidth’ [-Wimplicit-function-declaration]
      802 |             w = wcwidth(back->ch);
          |                 ^~~~~~~
    |
802 |             w = wcwidth(back->ch);
    |                 ^
cbits/termbox.c: In function ‘sigwinch_handler’:

cbits/termbox.c:1177:5: error:
     warning: ignoring return value of ‘write’ declared with attribute ‘warn_unused_result’ [-Wunused-result]
     1177 |     write(winch_fds[1], &zzz, sizeof(int));
          |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     |
1177 |     write(winch_fds[1], &zzz, sizeof(int));
     |     ^
cbits/termbox.c: In function ‘bytebuffer_flush’:

cbits/termbox.c:1327:5: error:
     warning: ignoring return value of ‘write’ declared with attribute ‘warn_unused_result’ [-Wunused-result]
     1327 |     write(fd, b->buf, b->len);
          |     ^~~~~~~~~~~~~~~~~~~~~~~~~
     |
1327 |     write(fd, b->buf, b->len);
     |     ^
cbits/termbox.c: In function ‘wait_fill_event’:

cbits/termbox.c:1268:13: error:
     warning: ignoring return value of ‘read’ declared with attribute ‘warn_unused_result’ [-Wunused-result]
     1268 |             read(winch_fds[0], &zzz, sizeof(int));
          |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     |
1268 |             read(winch_fds[0], &zzz, sizeof(int));
     |             ^
